--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,7 +3,7 @@
     </h1>
   
     <h2 class="intro__tagline">I'm
-      <span class="name">Justin Praseuthsouk</span>, a design-minded front-end software engineer focused on building beautiful interfaces &amp; experiences
+      <span class="name">Justin Praseuthsouk</span>, an aspiring developer &amp; tech enthusiast.
 
     </h2>
   
