--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title | default: "Justin Praseuthsouk Portfolio" }}</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    <header>
-        <h1>Justin Praseuthsouk Portfolio</h1>
-    </header>
-
     <main>
         {{ content }} <!-- This is where the content from index.html will be injected -->
     </main>
