--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,10 +1,8 @@
 <header class="intro">
-    <h1 class="intro__hello">Hello!
-    </h1>
+    <h1 class="intro__hello">Hello!</h1>
   
     <h2 class="intro__tagline">I'm
       <span class="name">Justin Praseuthsouk</span>, an aspiring developer &amp; tech enthusiast.
-
     </h2>
   
     <h3 class="intro__contact">
