--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,4 +1,4 @@
-<header class="intro">
+<section id="intro">
     <h1 class="intro__hello">Hello!</h1>
   
     <h2 class="intro__tagline">I'm
@@ -11,4 +11,4 @@
         <a href="mailto:justinponpras@gmail.com" target="_blank" class="highlight-link">justinponpras@gmail.com</a>
       </span>
     </h3>
-  </header>
+</section>
