--- a/css/about-me.css
+++ b/css/about-me.css
@@ -9,7 +9,7 @@
 .about-me__title {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #333;
+    color: #007BFF;
     margin-bottom: 10px;
 }
 
@@ -17,5 +17,4 @@
 .about-me__description {
     font-size: 1.2rem;
     line-height: 1.6;
-    color: #555;
 }
