--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,14 +1,5 @@
 <section id="intro">
-    <h1 class="intro__hello">Hello!</h1>
-  
-    <h2 class="intro__tagline">I'm
-      <span class="name">Justin Praseuthsouk</span>, an aspiring developer &amp; tech enthusiast.
-    </h2>
-  
-    <h3 class="intro__contact">
-      <span>Get in touch </span>
-      <span>
-        <a href="mailto:justinponpras@gmail.com" target="_blank" class="highlight-link">justinponpras@gmail.com</a>
-      </span>
-    </h3>
+    <h1 class="intro__hello">Hello, my name is</h1>
+    <h2 class="intro__name">Justin Praseuthsouk</h2>
+    <h3 class="intro__tagline">Aspiring developer &amp; tech enthusiast.</h3>
 </section>
