--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title | default: "Justin Praseuthsouk Portfolio" }}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     <main>
