--- a/css/about-me.css
+++ b/css/about-me.css
@@ -3,6 +3,7 @@
     padding: 50px;
     background-color: #f5f5f5;
     border-radius: 10px;
+    min-height: 100vh;
 }
 
 /* Styling the title using the class */
