--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section id="intro">
-    <h1 class="intro__hello">Hello, my name is</h1>
-    <h2 class="intro__name">Justin Praseuthsouk</h2>
-    <h3 class="intro__tagline">Aspiring developer &amp; tech enthusiast.</h3>
+    <p class="intro__hello">Hello, my name is</p>
+    <h1 class="intro__name">Justin Praseuthsouk</h1>
+    <p class="intro__tagline">Aspiring developer &amp; tech enthusiast.</p>
 </section>
