--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     line-height: 1.6;
     background: #171C28;
     color: #E7E7E7;
+    scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
