--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,4 +2,5 @@
     <p class="intro__hello">Hello, my name is</p>
     <h1 class="intro__name">Justin Praseuthsouk</h1>
     <p class="intro__tagline">Aspiring developer &amp; tech enthusiast.</p>
+    <button id="scrollButton">Scroll Down ⬇️</button>
 </section>
