--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title | default: "Justin Praseuthsouk Portfolio" }}</title>
     <link rel="stylesheet" href="/main.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <main>
