--- a/css/about-me.css
+++ b/css/about-me.css
@@ -25,7 +25,7 @@
 }
 
 /* When the content becomes visible, apply these styles */
-#aboiut-me.visible {
+#about-me.visible {
     opacity: 1;
     transform: translateY(0); /* Moves back into place */
 }
