--- a/css/intro.css
+++ b/css/intro.css
@@ -6,6 +6,7 @@
     justify-content: center;   /* Aligns content vertically */
     align-items: flex-start;       /* Aligns content horizontally */
     text-align: center;
+    margin-left: 20vw;
     gap: 1rem;
 }
 
