--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,6 @@
     <footer>
         <p>© 2025 My Portfolio. All Rights Reserved.</p>
     </footer>
-    <script src="/main.js"></script>
+    <script src="/main.js" defer></script>
 </body>
 </html>
