--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -36,6 +39,7 @@ footer {
     align-items: flex-start;       /* Aligns content horizontally */
     text-align: center;
     padding-left: 15vw;
+    padding-right: 15vw;
     padding-bottom: 10vh;
 }
 
@@ -48,13 +52,13 @@ footer {
 }
 
 .intro__name {
-    font-size: 8rem;
+    font-size: 7.5rem;
     font-weight: bold;
     margin: 0;
 }
 
 .intro__tagline {
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
     font-weight: normal;
     margin: 0;
 }
@@ -63,7 +67,8 @@ footer {
 .title {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #007BFF;
+    /* color: #007BFF; */
+    color: #22ccff;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -74,7 +79,39 @@ footer {
     margin-top: 0;
     margin-bottom: 10vh;
     padding-right: 20vw;
-    
+    font-size: 0.9rem;
+    font-weight: 300;
+}
+
+#skills__section{
+    display: flex;
+    justify-content: space-between; /* Evenly space columns */
+    gap: 40px;
+    flex-wrap: wrap; /* Allow responsiveness */
+    max-width: 700px;
+    margin: 0;
+}
+
+.skills__column {
+    flex: 1;
+    min-width: 200px; /* Prevent columns from becoming too narrow */
+}
+
+.skills__column h3 {
+    font-size: 1rem;
+    margin-bottom: 1px
+}
+
+.skills__column ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.skills__column li {
+    font-size: 0.9rem;
+    margin-bottom: 1px;
+    font-weight: 300;
 }
 
 /* Grid Layout for About Section */
