--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ footer {
 .title {
     font-size: 2.5rem;
     font-weight: bold;
-    /* color: #007BFF; */
     color: #22ccff;
     color: #007BFF;
     display: flex;
@@ -128,6 +127,16 @@ footer {
     font-size: 0.9rem;
     margin-bottom: 1px;
     font-weight: 300;
+}
+
+.projects__description {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 0;
+}
+
+.projects__description li{
+    margin-bottom: 3rem;
 }
 
 /* Grid Layout for About Section */
