--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ footer {
     font-size: 0.9rem;
     font-weight: 300;
     box-sizing: border-box;
+
+    list-style: none;
+    padding-left: 0;
 }
 
 .about-me__right h3 {
@@ -115,7 +118,10 @@ footer {
 
 .about-me__right p {
     margin-top: 0;
-    margin-bottom: 2rem;
+}
+
+#second-question {
+    margin-top: 5vh;
 }
 
 .skills__section{
@@ -124,7 +130,6 @@ footer {
     gap: 40px;
     flex-wrap: wrap; /* Allow responsiveness */
     max-width: 650px;
-    margin: 0;
 }
 
 .skills__column {
@@ -151,8 +156,6 @@ footer {
 .projects {
     list-style: none;
     padding-left: 0;
-    margin-bottom: 0;
-    font-size: 0.9rem;
 }
 
 .projects h3 {
