--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ main {
     padding: 2rem;
 }
 
+a {
+    color: #3B82F6;
+}
+
+a:visited {
+    color: #3B82F6;
+}
+
 footer {
     text-align: center;
     padding: 1rem;
@@ -112,7 +120,6 @@ footer {
 }
 
 .about-me__right h3 {
-    font-size: 1rem;
     margin-bottom: 0;
 }
 
@@ -214,7 +221,7 @@ footer {
 
     .margins {
         display: grid;
-        grid-template-columns: 3fr 5fr; /* Left takes 1 part, right takes 3 parts */
+        grid-template-columns: 2fr 5fr; /* Left takes 1 part, right takes 3 parts */
         gap: 5vw; /* Space between columns */
         align-items: start; /* Align both sides to the top */
     }
@@ -229,7 +236,7 @@ footer {
     .about-me__right, .skills__section, .projects {
         margin-top: 0;
         margin-bottom: 10vh;
-        margin-right: 5vw;
+        margin-right: 0;
         font-size: 0.9rem;
         font-weight: 300;
         box-sizing: border-box;
